--- a/content/chap03.tex
+++ b/content/chap03.tex
@@ -181,8 +181,21 @@ fc&1f&21&63&a5&f4& 7& 9&1b&2d&77&99&b0&cb&46&ca\\
 	\item 同样的方法处理$p_{1}$和$p_{2}$的第二个字节，结果为$\{1010\ 0111\}$。
 	\item 拼接两个结果得到$p_{encoded}=\{0000\ 0010\ 1010\ 0111\}$。
 \end{enumerate}
+\section{技术方案}
+TCP/NC的实现需要参与到协议栈的流程中去，涉及到内核开发。因此，只能选择开源的Linux平台。考虑到TCP/NC的应用场景主要是无线网络环境中的移动终端，我们决定选择一款嵌入式设备，在其上部署实现TCP/NC协议，以验证分析其在真实环境中的性能。
+\par
+Raspberry Pi是一款基于Linux的单板机电脑，由英国的树莓派基金会开发。基于ARM架构的Raspberry Pi使用博通（ Broadcom ）公司的BCM28XX系列处理器，主频从700MHz到1.2GHz不等。本文选择的是Raspberry Pi 2B+，主频900MHz，板载Ethernet网口，4个USB借口及HDMI视频输出。不仅如此，Raspberry Pi还引出了40个管脚，便于我们使用KGDB调试工具。图\ref{RASP_EPS}即为
+\begin{figure}
+	\centering
+\includegraphics[width=6in]{figures/rasp.pdf}
+\caption{Raspberry Pi}
+\label{RASP_EPS}
+\end{figure}
+
 \section{系统框架}
-图\ref{JIAGOU_EPS}展示的是TCP/NC的实现架构，虚线框内的就是NC层。对于从TCP层下来的报文，首先要根据TCP报文头部信息判定是何种报文。如果是控制报文，如TCP连接建立的三次握手、RST报文，则交由控制报文处理模块进行分类处理。这些控制报文没有包含数据，不要经过编解码。从TCP层下来的是数据报文，则需要被送到编码模块进行编码。编码后的
+图\ref{JIAGOU_EPS}展示的是TCP/NC的实现架构，虚线框内的就是NC层。对于从TCP层下来的报文，首先要根据TCP报文头部信息判定是何种报文。如果是控制报文，如TCP连接建立的三次握手、RST报文，则交由控制报文处理模块进行分类处理。这些控制报文没有包含数据，无需经过编解码即可发往IP层。如果从TCP层下来的是数据报文，则需要被送到编码模块进行编码。编码后的数据包需要添加NC头部，填写NC层的控制信息，如编码包的系数、长度等。NC报文组包完毕后被发往IP层。对于从TCP层下来的纯ACK报文（ 不带数据 ）,也需要添加NC头部，主要是为了不浪费向对端传递NC层的相关信息的机会。
+\par
+从IP层上来的报文也需要经过数据包类别判定。控制报文直接交给控制报文处理模块处理，然后交给上层TCP层。对于纯ACK则在提取NC层有用信息后再交付给上层TCP层。数据报文则送到解码模块进行解码，不论解码成功，亦或是仅仅看到某个报文（ see a packet ）,解码模块都需要和NC层控制单元交互信息。
 \begin{figure}[htbp]
 	\centering
 	\includegraphics[width=6in]{figures/jiagou.eps}
