--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -526,4 +526,10 @@ networks random bit error rate (BER) is negligible, and con-},
   author    = {张宗橙},
 }
 
+@Misc{rasp,
+  author       = {Author Unknown},
+  title        = {Raspberry Pi},
+  howpublished = {\url{https://en.wikipedia.org/wiki/Raspberry_Pi}},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
