--- a/setup/package.tex
+++ b/setup/package.tex
@@ -81,6 +81,8 @@
 \usepackage{array}
 % 外框宏包
 \usepackage{framed}
+\usepackage{rotating}
+\usepackage{url}
 
 % 引用文献实[Ni-Ni+j]的宏包
 \usepackage{cite}
