--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -122,18 +122,17 @@ networks random bit error rate (BER) is negligible, and con-},
 }
 
 @InProceedings{crosslayer,
-  author        = {T. Mahmoodi and V. Friderikos and O. Holland and A. H. Aghvami},
-  title         = {Cross-Layer Design to Improve Wireless TCP Performance with Link-Layer Adaptation},
-  booktitle     = {2007 IEEE 66th Vehicular Technology Conference},
-  year          = {2007},
-  pages         = {1504-1508},
-  month         = {Sept},
-  __markedentry = {[victor:]},
-  abstract      = {Transmission control protocol (TCP), the almost universally used reliable transport protocol in the Internet, has been engineered to perform well in wired networks where packet loss is mainly due to congestion. TCP throughput, however, degrades over wireless links, which are characterized by a high and greatly varying bit error rate and by intermittent connectivity. Over such wireless links, the performance achieved by TCP can be improved through the use of cross-layer algorithms at the link-level, which interact with the TCP state machine. In this paper, a TCP-aware dynamic ARQ algorithm is therefore proposed, which utilizes TCP timing information to prioritize ARQ packet retransmissions. Numerical investigation of the proposed algorithm demonstrates the performance improvements that can be attained through this approach, in comparison with TCP-agnostic link-layer approaches.},
-  doi           = {10.1109/VETECF.2007.320},
-  file          = {:cross layer design to improve wireless tcp performance with link layer adaptation.pdf:PDF},
-  issn          = {1090-3038},
-  keywords      = {error statistics;transport protocols;wireless sensor networks;Internet;bit error rate;cross-layer design;link-layer adaptation;transmission control protocol;wireless TCP performance;wireless networks;Automatic repeat request;Bit error rate;Cross layer design;Degradation;Heuristic algorithms;IP networks;Propagation losses;Reliability engineering;Throughput;Transport protocols},
+  author    = {T. Mahmoodi and V. Friderikos and O. Holland and A. H. Aghvami},
+  title     = {Cross-Layer Design to Improve Wireless TCP Performance with Link-Layer Adaptation},
+  booktitle = {2007 IEEE 66th Vehicular Technology Conference},
+  year      = {2007},
+  pages     = {1504-1508},
+  month     = {Sept},
+  abstract  = {Transmission control protocol (TCP), the almost universally used reliable transport protocol in the Internet, has been engineered to perform well in wired networks where packet loss is mainly due to congestion. TCP throughput, however, degrades over wireless links, which are characterized by a high and greatly varying bit error rate and by intermittent connectivity. Over such wireless links, the performance achieved by TCP can be improved through the use of cross-layer algorithms at the link-level, which interact with the TCP state machine. In this paper, a TCP-aware dynamic ARQ algorithm is therefore proposed, which utilizes TCP timing information to prioritize ARQ packet retransmissions. Numerical investigation of the proposed algorithm demonstrates the performance improvements that can be attained through this approach, in comparison with TCP-agnostic link-layer approaches.},
+  doi       = {10.1109/VETECF.2007.320},
+  file      = {:cross layer design to improve wireless tcp performance with link layer adaptation.pdf:PDF},
+  issn      = {1090-3038},
+  keywords  = {error statistics;transport protocols;wireless sensor networks;Internet;bit error rate;cross-layer design;link-layer adaptation;transmission control protocol;wireless TCP performance;wireless networks;Automatic repeat request;Bit error rate;Cross layer design;Degradation;Heuristic algorithms;IP networks;Propagation losses;Reliability engineering;Throughput;Transport protocols},
 }
 
 @Article{OpenIssues,
@@ -239,7 +238,7 @@ networks random bit error rate (BER) is negligible, and con-},
   pages         = {1204--1216},
   month         = jul,
   issn          = {0018-9448},
-  __markedentry = {[victor:6]},
+  __markedentry = {[victor:]},
   doi           = {10.1109/18.850663},
   file          = {:network_information_flow.pdf:PDF},
   keywords      = {computer networks, directed graphs, encoding, minimax techniques, multicast communication, telecommunication network routing, telecommunication switching, admissible coding rate region, bandwidth, computer network applications, directed graph, information source, information sources, max-flow min-cut theorem, multicasting, networ routing, network coding, network information flow, node coding, point-to-point communication network, switching systems design, Application software, Bandwidth, Communication networks, Computer networks, IP networks, Network coding, Source coding, Spine, Switches, Switching systems, rank5},
@@ -530,6 +529,13 @@ networks random bit error rate (BER) is negligible, and con-},
   author       = {Author Unknown},
   title        = {Raspberry Pi},
   howpublished = {\url{https://en.wikipedia.org/wiki/Raspberry_Pi}},
+}
+
+@Book{linux网络技术内幕,
+  title     = {深入理解Linux网络技术内幕},
+  publisher = {中国电力出版社},
+  year      = {2009},
+  author    = {本韦努蒂夏安 and 闫江毓 and 黄景昌},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
