--- a/content/chap04.tex
+++ b/content/chap04.tex
@@ -2,3 +2,5 @@
 %                西南交通大学研究生学位论文：第四章内容
 %---------------------------------------------------------------------------------
 \chapter{TCP/NC的改进及仿真结果}
+\subsection{无人机lossy信道环境搭建}
+为了在真实丢包环境中测试TCP/NC及其改进协议的性能，本文搭建了无人机测试环境。将部署了TCP/NC改进协议的Raspberry Pi搭载在无人机上，通过WIFI无线链路来与地面站通信。
