--- a/ref/refs.bib
+++ b/ref/refs.bib
@@ -428,6 +428,7 @@ networks random bit error rate (BER) is negligible, and con-},
   issn     = {1063-6692},
   abstract = {We take a new look at the issue of network capacity. It is shown that network coding is an essential ingredient in achieving the capacity of a network. Building on recent work by Li et al.(see Proc. 2001 IEEE Int. Symp. Information Theory, p.102), who examined the network capacity of multicast networks, we extend the network coding framework to arbitrary networks and robust networking. For networks which are restricted to using linear network codes, we find necessary and sufficient conditions for the feasibility of any given set of connections over a given network. We also consider the problem of network recovery for nonergodic link failures. For the multicast setup we prove that there exist coding strategies that provide maximally robust networks and that do not require adaptation of the network interior to the failure pattern in question. The results are derived for both delay-free networks and networks with delays.},
   doi      = {10.1109/TNET.2003.818197},
+  file     = {:an algebraic approach to network coding.pdf:PDF},
   keywords = {algebraic codes;channel capacity;delays;linear codes;matrix algebra;multicast communication;telecommunication network reliability;algebraic approach;algebraic coding;delay-free networks;failure pattern;multicast networks;multicast setup;necessary conditions;network capacity;network coding;network delay;network information theory;network recovery;nonergodic link failures;robust networking;sufficient conditions;transfer matrices;using linear network codes;Broadcasting;Channel coding;Galois fields;Helium;Information theory;Linear code;Network coding;Relays;Robustness;Sufficient conditions},
 }
 
@@ -536,6 +537,154 @@ networks random bit error rate (BER) is negligible, and con-},
   publisher = {中国电力出版社},
   year      = {2009},
   author    = {本韦努蒂夏安 and 闫江毓 and 黄景昌},
+}
+
+@InProceedings{5403816,
+  author    = {Jing Chen and Wei Tan and Lixiang Liu and Xiaohui Hu and Fanjiang Xu},
+  title     = {Towards zero loss for TCP in wireless networks},
+  booktitle = {2009 IEEE 28th International Performance Computing and Communications Conference},
+  year      = {2009},
+  pages     = {65-70},
+  month     = {Dec},
+  abstract  = {We propose a novel dynamic network coding retransmission scheme which can effectively mask packet losses and have a quite low decoding delay. By using network coding, we reduce the retransmission waiting time, and by using the implicit information of seen scheme, we acquire the exact number of packets the receiver needs for decoding packets. As our scheme does not require or estimate the loss rate to send redundancies in a constant rate, it is more practical to be implemented in a real system. Furthermore, we incorporate network coding with a load factor based congestion control algorithm which is easy and efficient to be implemented in practical systems. Simulation results show that our scheme significantly outperforms the previous coding approach in reducing decoding delay without sacrificing throughput. It achieves the near-zero congestion loss and Â¿zeroÂ¿ error loss in wireless networks, can be easily and effectively implemented in the practical system.},
+  doi       = {10.1109/PCCC.2009.5403816},
+  file      = {:towards zero loss for tcp in wireless networks.pdf:PDF},
+  issn      = {1097-2641},
+  keywords  = {network coding;packet radio networks;telecommunication congestion control;transport protocols;TCP;congestion control algorithm;network coding retransmission scheme;packets decoding;practical system;wireless networks;Decoding;Delay effects;Information systems;Laboratories;Network coding;Propagation losses;Robustness;Throughput;Transport protocols;Wireless networks;TCP;decoding delay;network coding;packet loss, rank5},
+}
+
+@Article{chan2013adaptive,
+  author   = {Chan, Yi-Cheng and Hu, Ya-Yi},
+  title    = {Adaptive network coding scheme for TCP over wireless sensor networks},
+  journal  = {International Journal of Computers Communications \& Control},
+  year     = {2013},
+  volume   = {8},
+  number   = {6},
+  pages    = {800--811},
+  file     = {:adaptive network coding scheme for tcp over wireless sensor.pdf:PDF},
+  keywords = {rank5},
+}
+
+@InProceedings{van2013adaptive,
+  author       = {Van Vu, Thuong and Boukhatem, Nadia and Nguyen, Thi Mai Trang and Pujolle, Guy},
+  title        = {Adaptive redundancy control with network coding in multi-hop wireless networks},
+  booktitle    = {Wireless Communications and Networking Conference (WCNC), 2013 IEEE},
+  year         = {2013},
+  pages        = {1510--1515},
+  organization = {IEEE},
+  file         = {:adaptive_redundancy_control_with_network_coding_in_multihop_wireless_networks.pdf:PDF},
+  keywords     = {rank5},
+}
+
+@InProceedings{5061923,
+  author    = {J. Barros and R. A. Costa and D. Munaretto and J. Widmer},
+  title     = {Effective Delay Control in Online Network Coding},
+  booktitle = {IEEE INFOCOM 2009},
+  year      = {2009},
+  pages     = {208-216},
+  month     = {April},
+  abstract  = {Motivated by streaming applications with stringent delay constraints, we consider the design of online network coding algorithms with timely delivery guarantees. Assuming that the sender is providing the same data to multiple receivers over independent packet erasure channels, we focus on the case of perfect feedback and heterogeneous erasure probabilities. Based on a general analytical framework for evaluating the decoding delay, we show that existing ARQ schemes fail to ensure that receivers with weak channels are able to recover from packet losses within reasonable time. To overcome this problem, we re-define the encoding rules in order to break the chains of linear combinations that cannot be decoded after one of the packets is lost. Our results show that sending uncoded packets at key times ensures that all the receivers are able to meet specific delay requirements with very high probability.},
+  doi       = {10.1109/INFCOM.2009.5061923},
+  file      = {:Effective Delay Control in Online Network Coding.pdf:PDF},
+  issn      = {0743-166X},
+  keywords  = {automatic repeat request;delays;encoding;feedback;probability;radio receivers;ARQ scheme;decoding delay;delay control;feedback;heterogeneous erasure probability;independent packet erasure channels;multiple receivers;online network coding;probability;Algorithm design and analysis;Communication system control;Communications Society;Decoding;Delay effects;Feedback;Network coding;Performance analysis;Throughput;Transport protocols, rank5},
+}
+
+@InProceedings{song2011self,
+  author    = {Song, Sicong and Li, H and Pan, K and Liu, J and Li, Shuo-Yen Robert},
+  title     = {Self-adaptive TCP protocol combined with network coding scheme},
+  booktitle = {International Conference on Systems and Networks Communications (ICSNC)},
+  year      = {2011},
+  pages     = {20--25},
+  file      = {:self-adaptive tcp protocol combined with network coding scheme.pdf:PDF},
+  keywords  = {rank5},
+}
+
+@InProceedings{4895447,
+  author    = {J. K. Sundararajan and D. Shah and M. Medard},
+  title     = {Online network coding for optimal throughput and delay - the three-receiver case},
+  booktitle = {2008 International Symposium on Information Theory and Its Applications},
+  year      = {2008},
+  pages     = {1-6},
+  month     = {Dec},
+  abstract  = {For a packet erasure broadcast channel with three receivers, we propose a new coding algorithm that makes use of feedback to dynamically adapt the code. Our algorithm is throughput optimal, and we conjecture that it also achieves an asymptotically optimal average decoding delay at the receivers. We consider heavy traffic asymptotics, where the load factor rho approaches 1 from below with either the arrival rate (lambda) or the channel parameter (mu) being fixed at a number less than 1. We verify through simulations that our algorithm achieves an asymptotically optimal decoding delay of O (1/1-rho).},
+  doi       = {10.1109/ISITA.2008.4895447},
+  file      = {:Online network coding for optimal throughput and delay.pdf:PDF},
+  keywords  = {broadcast channels;computational complexity;delays;encoding;telecommunication traffic;asymptotically optimal average decoding delay;asymptotically optimal decoding delay;coding algorithm;heavy traffic asymptotics;online network coding;optimal throughput;packet erasure broadcast channel;Automatic repeat request;Broadcasting;Decoding;Delay;Feedback;Information theory;Network coding;Space technology;Subcontracting;Throughput, rank5},
+}
+
+@InProceedings{5611991,
+  author    = {Yang Liu and Zhiyong Feng and Ping Zhang},
+  title     = {A novel ARQ scheme based on Network Coding Theory in Cognitive Radio networks},
+  booktitle = {2010 IEEE International Conference on Wireless Information Technology and Systems},
+  year      = {2010},
+  pages     = {1-4},
+  month     = {Aug},
+  abstract  = {In this paper, Network Coding (NC) Theory is introduced to improve efficiency of the traditional ARQ scheme for Cognitive Radio (CR) broadcast, named as NC-ARQ, in which we consider making the CR basestation combine the lost packets during ARQ broadcast retransmission in CR networks (CRN), with the changeable availability of CR channel. The Broadcast Cost is defined to indicate and compare the theoretic performance between traditional ARQ scheme and NC-ARQ. Numerical results are analyzed to validate the performance improvement of NC-ARQ.},
+  doi       = {10.1109/ICWITS.2010.5611991},
+  file      = {:a novel arq scheme based on network coding theory in cognitive ratio networks.pdf:PDF},
+  keywords  = {automatic repeat request;cognitive radio;network coding;radio broadcasting;wireless channels;ARQ broadcast retransmission;CR basestation;CR channel;CR network;NC-ARQ scheme;broadcast cost;cognitive radio broadcast;cognitive radio network;lost packet;network coding;Automatic repeat request;Cognitive radio;Equations;Markov processes;Mathematical model;Network coding;Probability;ARQ;Broadcast;Cognitive Radio Networks;Markov Model;Network Coding, rank4},
+}
+
+@InProceedings{6261883,
+  author    = {H. M. Ruiz and M. Kieffer and B. Pesquet-Popescu},
+  title     = {Redundancy adaptation scheme for network coding with TCP},
+  booktitle = {2012 International Symposium on Network Coding (NetCod)},
+  year      = {2012},
+  pages     = {49-54},
+  month     = {June},
+  abstract  = {To address the inability of the standard TCP protocol to distinguish between losses due to congestion and random packet losses on the noisy channel, this paper proposes an algorithm to dynamically adjust the redundancy factor R of the TPC/NC protocol proposed by Sundararajan et al. by adding some additional functionalities to the original network coding layer. We define a loss differentiation scheme to adjust R, based on the Vegas Loss Predictor and the collective feedback information of ACKs and duplicates ACKs, which are both indicators of the network condition. In that way the source adjusts R based on the network conditions, avoiding unnecessary TCP rate reduction linked to packet losses due to transmission impairments and preventing the network from entering in a congestion state. The TPC/NC implementation with our adaptive scheme is full-duplex, and can manage multiple TCP connections simultaneously. Simulation results over realistic network scenarios using OPNET Modeler show that our adaptive scheme in conjunction with the standard TCP/NC produces better TCP-throughputs than the standard TCP/NC, TCP-Reno, TPC New Reno, and TCP Reno with SACKS.},
+  doi       = {10.1109/NETCOD.2012.6261883},
+  file      = {:redundancy adaptation scheme for network coding with tcp.pdf:PDF},
+  issn      = {2374-9660},
+  keywords  = {network coding;telecommunication channels;transport protocols;ACK;OPNET modeler;SACKS;TCP Reno;TCP connections;TCP-throughputs;TPC/NC implementation;TPC/NC protocol;Vegas loss predictor;congestion state;full-duplex;network coding;noisy channel;random packet losses;redundancy adaptation scheme;standard TCP protocol;Encoding;IP networks;Network coding;Protocols;Receivers;Redundancy;Throughput, rank5},
+}
+
+@Article{chen2011combocoding,
+  author    = {Chen, Chien-Chia and Chen, Clifford and Oh, Soon Y and Park, Joon-Sang and Gerla, Mario and Sanadidi, MY},
+  title     = {ComboCoding: Combined intra-/inter-flow network coding for TCP over disruptive MANETs},
+  journal   = {Journal of Advanced Research},
+  year      = {2011},
+  volume    = {2},
+  number    = {3},
+  pages     = {241--252},
+  file      = {:ComboCoding_Combined intra_inter_flow network coding for tcp over disruptive Magnets.pdf:PDF},
+  publisher = {Elsevier},
+}
+
+@Article{zhang2016tcp,
+  author    = {Zhang, Chen and Chen, Yuanzhu and Li, Cheng},
+  title     = {TCP adaptation with network coding and opportunistic data forwarding in multi-hop wireless networks},
+  journal   = {PeerJ Computer Science},
+  year      = {2016},
+  volume    = {2},
+  pages     = {e89},
+  file      = {:tcp_adaptation_with_network_coding_and_opportunistic_data_forwarding_in_multihop_wireless_networks.pdf:PDF},
+  publisher = {PeerJ Inc.},
+}
+
+@InProceedings{6275780,
+  author    = {J. Qureshi and C. H. Foh and J. Cai},
+  title     = {Optimal solution for the index coding problem using network coding over GF(2)},
+  booktitle = {2012 9th Annual IEEE Communications Society Conference on Sensor, Mesh and Ad Hoc Communications and Networks (SECON)},
+  year      = {2012},
+  pages     = {209-217},
+  month     = {June},
+  abstract  = {The index coding problem is a fundamental transmission problem which occurs in a wide range of multicast networks. Network coding over a large finite field size has been shown to be a theoretically efficient solution to the index coding problem. However the high computational complexity of packet encoding and decoding over a large finite field size, and its subsequent penalty on encoding and decoding throughput and higher energy cost makes it unsuitable for practical implementation in processor and energy constraint devices like mobile phones and wireless sensors. While network coding over GF(2) can alleviate these concerns, it comes at a tradeoff cost of degrading throughput performance. To address this tradeoff, we propose a throughput optimal triangular network coding scheme over GF(2). We show that such a coding scheme can supply unlimited number of innovative packets and the decoding involves the simple back substitution. Such a coding scheme provides an efficient solution to the index coding problem and its lower computation and energy cost makes it suitable for practical implementation on devices with limited processing and energy capacity.},
+  doi       = {10.1109/SECON.2012.6275780},
+  file      = {:optimal solution for the index coding problem using network coding over GF(2).pdf:PDF},
+  issn      = {2155-5486},
+  keywords  = {Galois fields;computational complexity;decoding;mobile handsets;multicast communication;network coding;GF(2);computational complexity;energy constraint;finite field size;index coding problem;mobile phones;multicast networks;network coding;optimal solution;packet decoding;packet encoding;transmission problem;wireless sensors;Decoding;Encoding;Indexes;Network coding;Receivers;Throughput;Transmitters, rank5},
+}
+
+@InProceedings{martignon2004loss,
+  author       = {Martignon, Fabio and Fratta, Luigi},
+  title        = {Loss differentiation schemes for TCP over wireless networks},
+  booktitle    = {International Workshop on Quality of Service in Multiservice IP Networks},
+  year         = {2004},
+  pages        = {586--599},
+  organization = {Springer},
+  file         = {:loss differentiation schemes for tcp over wireless networks.pdf:PDF},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
